Tweaks on support contract

--- a/content/contracts/技术支持合同.md
+++ b/content/contracts/技术支持合同.md
@@ -17,9 +17,10 @@ title: '技术支持合同'
 
 ## 价格及付款方式
 
-0. 乙方采取小时工资制度，按照人民币<u>　　　元/小时</u>（含 3% 税）向甲方收取技术支持费用；
+0. 乙方采取小时工资制度，按照人民币<u>　　　元/小时 </u>（含 3% 税）向甲方收取技术支持费用；
+0. 乙方每周总工作时长需控制在 <u>　　　　　小时 </u>以内，如需调整，需提前经过甲方同意；
 0. 乙方每周一向甲方提供上周所有技术支持人员的 TopTracker 记录以及对应的费用账单，经双方确认无误后，乙方开具等额增值税普通发票（含 3% 税），甲方在乙方开票后的 3 个工作日内向乙方支付对应费用；
-0. 经双方协商终止服务后，甲方需根据 TopTracker 记录以及对应的费用账单支付剩余费用；
+0. 经双方协商终止服务后，甲方需根据 TopTracker 记录以及对应的费用账单支付剩余未结清的费用；
 0. 甲方付款方式： ☑ 银行转账 ☐ 现金
     - 账户名称：广州敏捷字节信息科技有限公司
     - 账户号码：3602176809100098060
@@ -48,7 +49,7 @@ title: '技术支持合同'
 
 ## 合同的解除
 
-0. 任意一方欲提前解除本合同，应提前通知对方，经双方协商签字同意后方可解除。甲方要求解除合同，无权要求乙方返还甲方向乙方已支付的费用，并应对乙方遭受的损失承担赔偿责任；乙方要求解除合同，无权要求甲方支付剩余费用，并赔偿由此引起甲方的损失；
+0. 任意一方欲提前解除本合同，应提前通知对方，经双方协商签字同意后方可解除。甲方要求解除合同，无权要求乙方返还甲方向乙方已支付的费用；乙方要求解除合同，无权要求甲方支付剩余费用，并赔偿由此引起甲方的损失；
 0. 订立本合同所依据的客观情况发生重大变化，致使本合同无法履行的，经双方协商同意，可以变更本合同相关内容或者终止合同的履行。
 
 ## 违约责任
